--- a/Source/CoreObjects/CoreObjects.dproj
+++ b/Source/CoreObjects/CoreObjects.dproj
@@ -137,6 +137,7 @@
         <DCCReference Include="Core.ResidenceAddress.pas"/>
         <DCCReference Include="Core.ResidenceLot.pas"/>
         <DCCReference Include="Core.Title.pas"/>
+        <DCCReference Include="Core.LotEvent.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -168,7 +169,7 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\15.0\Bpl\CoreObjects.bpl" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="C:\Users\Public\Documents\Embarcadero\Studio\21.0\Bpl\CoreObjects.bpl" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>CoreObjects.bpl</RemoteName>
                         <Overwrite>true</Overwrite>
