--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -40,7 +40,6 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
-        <Custom_Styles>Windows10|VCLSTYLE|$(BDSCOMMONDIR)\Styles\Windows10.vsf</Custom_Styles>
         <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <VerInfo_Locale>1036</VerInfo_Locale>
@@ -162,6 +161,7 @@
             <Form>frmParamResidenceAddress</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Controllers\Controller.LotEvent.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -183,14 +183,12 @@
                     <Source Name="MainSource">Residence.dpr</Source>
                 </Source>
                 <Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k250.bpl">Composants Microsoft Office 2000 Sample Automation Server Wrapper</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp250.bpl">Composants Microsoft Office XP Sample Automation Server Wrapper</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Software\Components\TMS\aureliusfreetokyo\bcl\packages\dtokyo\..\bpl\Win32\dcltmsbcl250.bpl">Fichier C:\Software\Components\TMS\aureliusfreetokyo\bcl\packages\dtokyo\..\bpl\Win32\dcltmsbcl250.bpl non trouvé</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Software\Components\TMS\aureliusfreetokyo\aurelius\packages\dtokyo\..\bpl\Win32\dclaurelius250.bpl">Fichier C:\Software\Components\TMS\aureliusfreetokyo\aurelius\packages\dtokyo\..\bpl\Win32\dclaurelius250.bpl non trouvé</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k270.bpl">Composants Microsoft Office 2000 Sample Automation Server Wrapper</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp270.bpl">Composants Microsoft Office XP Sample Automation Server Wrapper</Excluded_Packages>
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
-                <DeployFile LocalName="..\bin\Win32\Debug\Residence.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="..\bin\Residence.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Residence.exe</RemoteName>
                         <Overwrite>true</Overwrite>
