--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -162,6 +162,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Controllers\Controller.LotEvent.pas"/>
+        <DCCReference Include="UI.VCL.ParamLotEventForm.pas">
+            <Form>frmParamLotEvent</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
