--- a/Source/CoreObjects/CoreObjects.dproj
+++ b/Source/CoreObjects/CoreObjects.dproj
@@ -138,6 +138,7 @@
         <DCCReference Include="Core.ResidenceLot.pas"/>
         <DCCReference Include="Core.Title.pas"/>
         <DCCReference Include="Core.LotEvent.pas"/>
+        <DCCReference Include="Core.BankAccountLine.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
