--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -166,6 +166,11 @@
             <Form>frmParamLotEvent</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Controllers\Controller.BankAccountLine.pas"/>
+        <DCCReference Include="UI.VCL.BankAccountLineForm.pas">
+            <Form>frmBankAccountLineForm</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
