--- a/Source/CoreObjects/CoreObjects.dproj
+++ b/Source/CoreObjects/CoreObjects.dproj
@@ -139,6 +139,7 @@
         <DCCReference Include="Core.Title.pas"/>
         <DCCReference Include="Core.LotEvent.pas"/>
         <DCCReference Include="Core.BankAccountLine.pas"/>
+        <DCCReference Include="Core.LineKind.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
