--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -171,6 +171,11 @@
             <Form>frmBankAccountLineForm</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Controllers\Controller.LineKind.pas"/>
+        <DCCReference Include="UI.VCL.ParamLineKind.pas">
+            <Form>frmParamLineKind</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
