--- a/Source/CoreObjects/CoreObjects.dproj
+++ b/Source/CoreObjects/CoreObjects.dproj
@@ -140,6 +140,7 @@
         <DCCReference Include="Core.LotEvent.pas"/>
         <DCCReference Include="Core.BankAccountLine.pas"/>
         <DCCReference Include="Core.LineKind.pas"/>
+        <DCCReference Include="Core.LineKindLot.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
