--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -176,6 +176,7 @@
             <Form>frmParamLineKind</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Controllers\Controller.LineKindLot.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
