--- a/Source/CoreObjects/CoreObjects.dproj
+++ b/Source/CoreObjects/CoreObjects.dproj
@@ -141,6 +141,7 @@
         <DCCReference Include="Core.BankAccountLine.pas"/>
         <DCCReference Include="Core.LineKind.pas"/>
         <DCCReference Include="Core.LineKindLot.pas"/>
+        <DCCReference Include="Core.AccountingYear.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
