--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -181,6 +181,7 @@
             <Form>frmParamLineKindLot</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="Controllers\Controller.AccountingYear.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
