--- a/Source/Residence.dproj
+++ b/Source/Residence.dproj
@@ -182,6 +182,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Controllers\Controller.AccountingYear.pas"/>
+        <DCCReference Include="UI.VCL.ParamAccountingYear.pas">
+            <Form>frmParamAccoutingYear</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
